--- a/m-sailingclient/client/src/app/core/account/login/login.component.html
+++ b/m-sailingclient/client/src/app/core/account/login/login.component.html
@@ -1,1 +1,26 @@
-<p>login works!</p>
+<div class="d-flex justify-content-center mt-5">
+  <form style="width: 500px;" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <h1 class="h3 mb-3 fw-normal">Войти в аккаунт</h1>
+
+    <div class="mb-3">
+      <label for="email" class="form-label">Email:</label>
+      <input id="email" type="email" class="form-control" formControlName="email" required>
+      <div *ngIf="loginForm.get('email')?.invalid && (loginForm.get('email')?.touched || loginForm.get('email')?.dirty)" class="text-danger">
+        <div *ngIf="loginForm.get('email')?.errors?.['required']">Email обязателен.</div>
+        <div *ngIf="loginForm.get('email')?.errors?.['pattern']">Неверный формат email.</div>
+      </div>
+    </div>
+
+    <div class="mb-3">
+      <label for="password" class="form-label">Пароль:</label>
+      <input id="password" type="password" class="form-control" formControlName="password" required>
+      <div *ngIf="loginForm.get('password')?.invalid && (loginForm.get('password')?.touched || loginForm.get('password')?.dirty)" class="text-danger">
+        <div *ngIf="loginForm.get('password')?.errors?.['required']">Пароль обязателен.</div>
+      </div>
+    </div>
+
+    <span style="color: red">{{ error }}</span>
+
+    <button [disabled]="loginForm.invalid" class="btn btn-primary w-100 py-2" type="submit">Войти</button>
+  </form>
+</div>
