работает авторизация пользователя.

--- a/m-sailingclient/client/src/app/core/footer/footer.component.html
+++ b/m-sailingclient/client/src/app/core/footer/footer.component.html
@@ -49,7 +49,7 @@ mail
     <span><a href="core/terms-of-service">Условия использования</a> <span class="vertical"> |</span></span>
    <span><a href="https://m-sailing.ru/sitemap.xml" target="_blank">Карта сайта</a> <span class="vertical"> |</span></span>
     <span><a href="core/cookie-policy">Политика использования файлов cookie</a><span class="vertical"> |</span></span>
-    <span><a href="core/account/login">Admins</a></span>
+    <span><a href="core/login">Admins</a></span>
   </div>
 
   <p class="text-center text-body-secondary" style="border-top: 1px solid black; margin-top: 10px; padding-top: 10px;">©
