--- a/m-sailingclient/client/src/app/core/footer/footer.component.html
+++ b/m-sailingclient/client/src/app/core/footer/footer.component.html
@@ -45,11 +45,11 @@ mail
 
   </div>
   <div class="conditions">
-    <span><a href="core/privacy-policy">Политика конфиденциальности</a> <span class="vertical"> |</span></span>
-    <span><a href="core/terms-of-service">Условия использования</a> <span class="vertical"> |</span></span>
+    <span><a href="/privacy-policy">Политика конфиденциальности</a> <span class="vertical"> |</span></span>
+    <span><a href="/terms-of-service">Условия использования</a> <span class="vertical"> |</span></span>
    <span><a href="https://m-sailing.ru/sitemap.xml" target="_blank">Карта сайта</a> <span class="vertical"> |</span></span>
-    <span><a href="core/cookie-policy">Политика использования файлов cookie</a><span class="vertical"> |</span></span>
-    <span><a href="core/login">Admins</a></span>
+    <span><a href="/cookie-policy">Политика использования файлов cookie</a><span class="vertical"> |</span></span>
+    <span><a href="/login">Admins</a></span>
   </div>
 
   <p class="text-center text-body-secondary" style="border-top: 1px solid black; margin-top: 10px; padding-top: 10px;">©
