коммит с созданием и обновлением товара, неработает на сервере, ссылки на удаление и редактирование товара в самом товаре, сделанный интерцептор, с токеном, немного рефактора css.

--- a/m-sailingclient/client/src/app/core/footer/footer.component.html
+++ b/m-sailingclient/client/src/app/core/footer/footer.component.html
@@ -50,6 +50,7 @@ mail
    <span><a href="https://m-sailing.ru/sitemap.xml" target="_blank">Карта сайта</a> <span class="vertical"> |</span></span>
     <span><a href="/cookie-policy">Политика использования файлов cookie</a><span class="vertical"> |</span></span>
     <span><a href="/login">Admins</a></span>
+    <span *appHasRole="['Admin']"><span class="vertical"> | </span><a  href="/create-equipment">Создать</a></span>
   </div>
 
   <p class="text-center text-body-secondary" style="border-top: 1px solid black; margin-top: 10px; padding-top: 10px;">©
