--- a/m-sailingclient/client/src/app/shop/oneequipment/oneequipment.component.less
+++ b/m-sailingclient/client/src/app/shop/oneequipment/oneequipment.component.less
@@ -8,42 +8,80 @@
 }
 .info {
   margin-left: 10%;
-
+  margin-top: 5%;
+  display: flex;
+  flex-direction: column;
+justify-content: center;
+  align-items: flex-start;
+}
+h3{
+  margin: 2% 0;
 }
 .button-size {
-  margin-right: 5px;
-  background-color: grey
+  border: 1px solid black;
+  background-color: rgb(255, 255, 255);
+  color: black;
+  margin: 5px;
 }
-
-.button-size.selected {
-  background-color: #0202f8;
+.button-size:hover {
+  background-color: rgba(0, 0, 0, 0.55);
   color: white;
 }
+.button-size.selected {
+  background-color: rgb(0, 0, 0);
+  color: #ffffff;
+
+}
+.button-size.disable {
+  background-color: rgba(0, 0, 0, 0.1);
+  color: black;
+  opacity: 0.3;
+  cursor: not-allowed;
+}
 .buttons {
-  display: flex;
-  margin-top: 20px;
-  flex-direction: column;
+  //display: flex;
+  //margin-top: 20px;
+  //flex-direction: column;
+
+
+}
+.edit {
+  margin: 10px;
+  cursor: pointer;
+}
+.addToCart {
+  margin-right: 10px;
+  background-color: @color-primary;
+  border-radius: 10px;
+  padding: 10px;
+  transition: color 1s ease, scale 1s ease;
+  color: white;
+}
+.addToCart:hover {
+scale: 1.1;
 }
 .inside-buttons {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 .delete-button {
-  background-color: @color-primary;
+  background-color: black;
   padding: 5px;
   border-radius: 10px;
-  border: 1px solid @color-primary;
   display: flex;
   justify-content: center;
   align-self: center;
-  width: 30px;
+  width: 40px;
+  height: 50px;
   cursor: pointer;
   color: white;
+  margin: 5px;
 }
 .delete-button:hover {
   scale: 1.1;
-  background-color: blue;
   transition: scale 0.5s ease, background-color 0.5s ease;
+
 }
 
 button {
@@ -52,10 +90,9 @@ button {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #fff;
-  background-color: @color-primary;
-  border: 1px solid @color-primary;
-  border-radius: 5px;
+  //background-color: @color-primary;
+  //border: 1px solid @color-primary;
+  //border-radius: 5px;
   cursor: pointer;
   text-align: center;
   vertical-align: middle;
@@ -63,8 +100,8 @@ button {
   user-select: none;
 
   &:hover {
-    background-color: darken(@color-primary, 10%);
-    border-color: darken(@color-primary, 10%);
+    //background-color: darken(@color-primary, 10%);
+    //border-color: darken(@color-primary, 10%);
   }
 }
 .details {
@@ -80,9 +117,8 @@ button {
 }
 
 .equipment-image {
-  width: 300px;
+  width: 500px;
   height: 100%;
-  border-bottom: 1px solid black;
 }
 .name {
   font-family: "Ubuntu", sans-serif;
@@ -90,10 +126,15 @@ button {
   font-style: italic;
 }
 .description {
+  margin-top: 10px;
+  width: 70%;
   font-family: "Poppins", sans-serif;
   font-weight: 500;
   font-style: normal;
-
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .productdata {
   display: flex;
@@ -126,6 +167,9 @@ button {
   .productdata {
     flex-direction: column;
   }
+  .edit {
+    margin-top: 10px;
+  }
   .equipment-image {
     width: 100%;
     height: auto;
@@ -140,7 +184,7 @@ button {
     font-style: normal;
   }
   .description {
-    width: 100%;
+    width: 90%;
     word-wrap: break-word;
   }
 }
