--- a/m-sailingclient/client/src/app/shop/oneequipment/oneequipment.component.less
+++ b/m-sailingclient/client/src/app/shop/oneequipment/oneequipment.component.less
@@ -57,6 +57,11 @@ h3{
   transition: color 1s ease, scale 1s ease;
   color: white;
 }
+.addToCart.dis {
+  cursor: not-allowed;
+  opacity: 0.4;
+  scale: 1;
+}
 .addToCart:hover {
 scale: 1.1;
 }
