--- a/m-sailingclient/client/src/styles.less
+++ b/m-sailingclient/client/src/styles.less
@@ -2,7 +2,9 @@ html {
   overflow-y: scroll;
 }
 
-
+.toastr {
+  z-index: 9999;
+}
 body {
   background-color: rgb(255, 255, 255);
   color: black;
