Работает добавление удаление товара прямо в компоненте товара,  обработка ошибок с количеством

--- a/m-sailingclient/client/src/app/basket/basket/basket.component.html
+++ b/m-sailingclient/client/src/app/basket/basket/basket.component.html
@@ -9,10 +9,10 @@
     <div class="product-price">Цена Всего: {{ item.product.price * item.quantity }} ₽</div>
     <div class="product-quantity">Количество: {{ item.quantity }}</div>
     <div class="plus-minus">
-      <button (click)="increaseQuantity(item.product.id)">+</button>
-      <button (click)="decreaseQuantity(item.product.id, item.product.size)">-</button>
+      <button (click)="increaseQuantity(item.product.productId, item.product.size)">+</button>
+      <button (click)="decreaseQuantity(item.product.productId, item.product.size)">-</button>
     </div>
-    <button (click)="removeFromCart(item.product.id, item.product.size)">Удалить</button>
+    <button (click)="removeFromCart(item.product.productId, item.product.size)">Удалить</button>
     </div>
 </div>
 <h4 style="text-align: center">Итоговая Сумма заказа (Без учёта доставки) - {{totalPrice}} ₽</h4>
