--- a/m-sailingclient/client/src/app/orders/create-order/create-order.component.less
+++ b/m-sailingclient/client/src/app/orders/create-order/create-order.component.less
@@ -9,6 +9,16 @@
 @color-light: #f8f9fa;
 @color-dark: #343a40;
 
+.BackToBasket {
+  margin: 30px;
+  background-color: #0202f8;
+ padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+}
+
 form {
   max-width: 600px;
   margin: 0 auto;
