--- a/m-sailingclient/client/src/app/orders/order-success/order-success.component.html
+++ b/m-sailingclient/client/src/app/orders/order-success/order-success.component.html
@@ -15,6 +15,7 @@ handshake
       <div class="order-item-details">
         <div class="order-item-name">{{ item.name }}</div>
         <div class="order-item-price">Цена за штуку: {{ item.price }} ₽</div>
+        <div class="order-item-quantity">Размер: {{ item.size }}</div>
         <div class="order-item-quantity">Количество: {{ item.quantity }}</div>
         <div style="margin-top: 5px">Цена Итого по товару: {{ item.price * item.quantity}} ₽</div>
       </div>
