--- a/m-sailingclient/client/src/app/shop/oneequipment/oneequipment.component.html
+++ b/m-sailingclient/client/src/app/shop/oneequipment/oneequipment.component.html
@@ -26,12 +26,18 @@
           <div class="inside-buttons">
             <button (click)="addItem(equipment)" [class.dis]="selectedSize == null" [disabled]="selectedSize == null" class="addToCart">Добавить в Корзину</button>
 
-            <a class="delete-button" *ngIf="isProductAddedToCart" (click)="removeFromCart(equipment.id)"><span class="material-symbols-outlined">
+            <a class="delete-button" *ngIf="isProductAddedToCart || quantityInBasket !== 0" (click)="removeFromCart(equipment.id)"><span class="material-symbols-outlined">
 delete
 </span></a>
 
           </div>
-          <span>Количество данного товара в корзине: <strong>{{quantityInBasket}}</strong> - Редактировать количество Вы сможете перейдя в корзину  </span><br>
+<!--          <span>Количество данного товара в корзине: <strong>{{quantityInBasket}}</strong> - Редактировать количество Вы сможете перейдя в корзину  </span><br>-->
+          <div class="plus-minus">
+            <button class="addToCart" style="margin: 0" [class.dis]="!selectedSize || quantityInBasket == 0" [disabled]="!selectedSize || quantityInBasket == 0" (click)="increaseQuantity(equipment.id, selectedSize.size)">+</button>
+            <strong class="quantity">{{quantityInBasket}}</strong>
+            <button class="addToCart" style="margin: 0" [class.dis]="!selectedSize || quantityInBasket == 0" [disabled]="!selectedSize || quantityInBasket == 0" (click)="decreaseQuantity(equipment.id, selectedSize.size)">-</button>
+<!--          <button class="addToCart" [class.dis]="!selectedSize || quantityInBasket == 0" [disabled]="!selectedSize || quantityInBasket == 0" (click)="removeFromCart(equipment.id)">Удалить</button>-->
+        </div>
           <a routerLink="/basket" style="font-size: smaller; margin-top: 5px">Перейти в корзину</a>
           <div style="margin: 10px; display: flex; flex-direction: column;">
             <a class="edit" [routerLink] = "['/create-equipment', equipment.id]" *appHasRole="['Admin']">Редактировать товар</a>
