--- a/m-sailingclient/client/src/app/shop/oneequipment/oneequipment.component.less
+++ b/m-sailingclient/client/src/app/shop/oneequipment/oneequipment.component.less
@@ -50,7 +50,7 @@ h3{
   cursor: pointer;
 }
 .addToCart {
-  margin-right: 10px;
+  margin: 0 10px;
   background-color: @color-primary;
   border-radius: 10px;
   padding: 10px;
@@ -83,10 +83,27 @@ scale: 1.1;
   color: white;
   margin: 5px;
 }
+.plus-minus {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap : 10px;
+}
 .delete-button:hover {
   scale: 1.1;
   transition: scale 0.5s ease, background-color 0.5s ease;
 
+}
+.quantity {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(222, 222, 222, 0.76);
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 10px 20px;
 }
 
 button {
