коммит перед изменением размеров

--- a/m-sailingclient/client/src/app/home/home.component.html
+++ b/m-sailingclient/client/src/app/home/home.component.html
@@ -16,17 +16,13 @@
           <p class="description">Здесь вы найдете высококачественную экипировку Sandiline, Zhik, а так же вооружение для парусного спорта и яхтинга. Мы поставляем продукцию по всей России. Вы Можете заказать любой товар Sandiline и Zhik, которого нет у нас в наличии, </p>
 
         </div>
-<!--        Скидочный товар-->
 
-<!--        <div class="sale-banner" *ngIf="discountProduct.price" routerLink="/equipment/{{discountProduct.id}}">-->
-<!--          <h1 class="sale-title">Распродажа!</h1>-->
-<!--          <img [src]="discountProduct.pictures" alt="{{ discountProduct.name }}">-->
-<!--          <h2 class="sale-product-name" style="color:black;">{{ discountProduct.name }}</h2>-->
-<!--          <p class="original-price">Цена без скидки: 54044 Руб.</p>-->
-<!--          <p class="discounted-price">Цена по скидке: {{ discountProduct.price }} Руб.</p>-->
-<!--          <p class="discount-percentage">Скидка: 40%</p>-->
-<!--          <span class="undertext">Кликните, что бы перейти на страницу товара.</span>-->
-<!--        </div>-->
+        <div class="sale-banner">
+          <span class="description">В нашем магазине есть вооружение для класса Optimist, а так же скоро в M-sailing появятся корпуса Winner 3D и и соответсвующее им оборудование. В разделе <a
+            href="armament">вооружение</a> Вы можете ознакомиться с имеющимися в наличии товарами.</span>
+<app-slideshow></app-slideshow>
+        </div>
+
       </div>
     </div>
 
