--- a/m-sailingclient/client/src/app/shop/oneequipment/oneequipment.component.less
+++ b/m-sailingclient/client/src/app/shop/oneequipment/oneequipment.component.less
@@ -87,7 +87,7 @@ scale: 1.1;
   margin-top: 10px;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   gap : 10px;
 }
