--- a/m-sailingclient/client/src/app/home/home.component.less
+++ b/m-sailingclient/client/src/app/home/home.component.less
@@ -84,15 +84,17 @@
 
 .sale-banner {
   border: 1px solid #ccc;
-  padding: 16px;
+  padding: 30px;
   text-align: center;
   background-color: #f9f9f9;
   margin-bottom: 16px;
+  margin-top: 20px;
   margin-right: 50px;
   border-radius: 8px;
   cursor: pointer;
-  max-width: 300px;
+  max-width: 500px;
   width: 100%;
+  height: 100%;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
 }
 
@@ -191,7 +193,7 @@
   z-index: 2;
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   height: 100%;
   padding: 0 20px;
@@ -216,6 +218,7 @@
   font-size: 1.2em;
   max-width: 600px;
   margin-bottom: 30px;
+  color: black;
 }
 /* Квадратная картинка */
 .square-image {
