--- a/m-sailingclient/client/src/app/shop/equipment/equipment.component.less
+++ b/m-sailingclient/client/src/app/shop/equipment/equipment.component.less
@@ -85,7 +85,12 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-
+@media (max-width: 1100px) {
+  .product-card {
+  margin: 10px;
+    width: calc(30% - 20px);
+  }
+}
 @media (max-width: 768px) {
   .product-card {
     width: calc(80% - 20px);
