--- a/m-sailingclient/client/src/app/shop/oneequipment/oneequipment.component.less
+++ b/m-sailingclient/client/src/app/shop/oneequipment/oneequipment.component.less
@@ -22,6 +22,8 @@ h3{
   background-color: rgb(255, 255, 255);
   color: black;
   margin: 5px;
+  //display: flex;
+  //flex-direction: column;
 }
 .button-size:hover {
   background-color: rgba(0, 0, 0, 0.55);
