--- a/m-sailingclient/client/src/app/shop/oneequipment/oneequipment.component.html
+++ b/m-sailingclient/client/src/app/shop/oneequipment/oneequipment.component.html
@@ -14,8 +14,9 @@
                     [class.selected]="selectedSize === variant"
                     [class.disable]="variant.quantity === 0"
                     [disabled]="variant.quantity === 0">
-              <span *appHasRole="['Admin']">{{variant.quantity}} шт. </span>
-              <strong>{{ variant.size }}</strong>
+
+              <strong>{{ variant.size }}</strong><br>
+              <span *ngIf="variant.quantity != 0" style="font-size: small">{{variant.quantity}} шт. </span>
             </button>
           </div>
         <span>Выберете размер, что бы добавить товар в корзину.</span>
@@ -24,7 +25,7 @@
                                                                          [class.red]="equipment.typeForBuy === 'Под заказ'">{{ equipment.typeForBuy }}</span></h3>
         <div class="buttons">
           <div class="inside-buttons">
-            <button (click)="addItem(equipment)" [class.dis]="selectedSize == null" [disabled]="selectedSize == null" class="addToCart" style="margin: 0">Добавить в Корзину</button>
+            <button (click)="addItem(equipment)" [class.dis]="selectedSize == null || selectedSize.quantity == quantityInBasket" [disabled]="selectedSize == null || selectedSize.quantity == quantityInBasket" class="addToCart" style="margin: 0">Добавить в Корзину</button>
 
             <a class="delete-button" *ngIf="isProductAddedToCart || quantityInBasket !== 0" (click)="removeFromCart(equipment.id)"><span class="material-symbols-outlined">
 delete
@@ -33,7 +34,7 @@ delete
           </div>
 <!--          <span>Количество данного товара в корзине: <strong>{{quantityInBasket}}</strong> - Редактировать количество Вы сможете перейдя в корзину  </span><br>-->
           <div class="plus-minus">
-            <button class="addToCart" style="margin: 0" [class.dis]="!selectedSize || quantityInBasket == 0" [disabled]="!selectedSize || quantityInBasket == 0" (click)="increaseQuantity(equipment.id, selectedSize.size)">+</button>
+            <button class="addToCart" style="margin: 0" [class.dis]="!selectedSize || quantityInBasket == 0 || selectedSize.quantity == quantityInBasket" [disabled]="!selectedSize || quantityInBasket == 0 || selectedSize.quantity == quantityInBasket" (click)="increaseQuantity(equipment.id, selectedSize.size)">+</button>
             <strong class="quantity">{{ quantityInBasket}}</strong>
             <button class="addToCart" style="margin: 0" [class.dis]="!selectedSize || quantityInBasket == 0" [disabled]="!selectedSize || quantityInBasket == 0" (click)="decreaseQuantity(equipment.id, selectedSize.size)">-</button>
 <!--          <button class="addToCart" [class.dis]="!selectedSize || quantityInBasket == 0" [disabled]="!selectedSize || quantityInBasket == 0" (click)="removeFromCart(equipment.id)">Удалить</button>-->
